# echo-serv

./: Cargo.toml  README.md
container/: entrypoint.sh
deploy/docker/: Dockerfile  compose.yaml  sample.env
src/: main.rs
